# sl-gem

./: .clinerules  .gitignore  Cargo.toml  README.md  shader_test_report.html  texture_creator.rs
.github/workflows/: rust.yml
.rust-analyzer/: config
data-editor/: Cargo.toml  README.md  package.json
data-editor/src/: main.js  main.rs
docs/: architecture.md  event-loop-design.md  graphical_map_implementation_plan.md  graphical_map_implementation_plan_phase2.md  map-specification.md  milestone.md  plan.md  shader_test_environment_plan.md
engine/: Cargo.toml  README.md
engine/src/: core.rs  events.rs  lib.rs  main.rs
engine/src/graphics/: camera.rs  mod.rs  texture.rs  wgpu_context.rs  window.rs
engine/src/graphics/assets/: mod.rs
engine/src/graphics/renderer/: map_renderer.rs  mod.rs  tile_renderer.rs  tile_renderer_test.rs  ui_renderer.rs  unit_renderer.rs
engine/src/graphics/shaders/: mod.rs  tile.wgsl  tile_shader_test.rs
engine/src/gui/: graphical_map_gui.rs  map_gui.rs  mod.rs
game/: Cargo.toml  README.md
game/assets/textures/tiles/: default_tileset.ppm
game/src/: main.rs
model/: README.md
model/src/: faction.rs  lib.rs  map.rs  unit.rs
renderer/: Cargo.toml  shader_test_report.html
renderer/examples/: shader_tester.rs
renderer/src/: camera.rs  lib.rs  texture.rs  wgpu_context.rs  window.rs
renderer/src/shader_test/: case.rs  headless.rs  mod.rs  runner.rs  ui.rs  validator.rs
renderer/src/shaders/: mod.rs  test.wgsl  tile.wgsl  ui.wgsl  unit.wgsl
renderer/tests/shader_tests/: basic_color.ron
renderer/tests/textures/: test_pattern  test_pattern.ppm  test_pattern.rs
scripts/: check.sh
src/: main.rs
src/engine/: core.rs
